Fix: top magrin of activity section on mobile

--- a/css/Components/img-cards.css
+++ b/css/Components/img-cards.css
@@ -86,6 +86,7 @@
 @media screen and (max-width: 768px) {
   .activities {
     padding: 16px;
+    margin-top: 0px;
   }
 
   .img-cards {
